# Kabegami

./: .gitignore  CMakeLists.txt  README.md
include/: CLIHandler.h  GStreamer.h  KLoggeg.h  VideoPlayer.h  XWPWindow.h  XrandrManager.h
src/: CLIHandler.cpp  GStreamer.cpp  VideoPlayer.cpp  XWPWindow.cpp  XrandrManager.cpp  main.cpp
